# fracridge

./: .buildinfo  .gitignore  .zenodo.json  2020-02-06-experiments.ipynb  CHANGES.rst  README.md  Untitled.ipynb  api.html  contributing.html  fracridge.m  fracridge.py  genindex.html  index.html  objects.inv  pyproject.toml  quick_start.html  requirements-dev.txt  requirements.txt  ridge_tools.py  ridgeregressiongamma.m  search.html  searchindex.js  setup.cfg  setup.py  sg_execution_times.html  simulation1.m  test_fracridge.py  test_ridge_tools.py  user_guide.html
.github/workflows/: docbuild.yml  publish-to-test-pypi.yml  pythonpackage.yml
_downloads/2dbd202de70c8b6a394b8a1c7c1e12b8/: plot_pipeline.ipynb
_downloads/3d01c4a5d9df52350bc4b13972dd6395/: plot_alpha_vs_gamma.py
_downloads/43bda9202ac9d1110c83bbd470abde3f/: plot_alpha_vs_gamma.ipynb
_downloads/8714f1f7d62586672aba4674977fc571/: plot_diabetes.ipynb
_downloads/ad3d585e98f176f6d63f9348f33d1c31/: plot_diabetes.py
_modules/: index.html
_sources/: api.rst.txt  quick_start.rst.txt  sg_execution_times.rst.txt
auto_examples/: index.html  plot_alpha_vs_gamma.html  plot_diabetes.html  plot_paths_cv_curves.html  plot_pipeline.html  sg_execution_times.html
docs/: api.rst  conf.py  contributing.rst  index.rst  quick_start.rst  user_guide.rst
examples/: README.txt  plot_alpha_vs_gamma.py  plot_diabetes.py  plot_paths_cv_curves.py  plot_pipeline.py  profile_rrgamma.ipynb
fracridge/: __init__.py  _linalg.py  _meta.py  _numba.py  fracridge.py  linalg.py  numba.py
matlab/: fracridge.m
(+24 files in other folders)
