[metadata]
name = fracridge
url = https://nrdg.github.io/fracridge
download_url = https://github.com/nrdg/fracridge
author = Ariel Rokem and Kendrick Kay
author_email = arokem@gmail.com
maintainer = Ariel Rokem
maintainer_email = arokem@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering

license = BSD License
description = Fractional Ridge Regression
long_description = file:README.md
long_description_content_type = text/markdown
platforms = OS Independent

[options]
setup_requires =
  setuptools_scm
python_requires = >=3.6
install_requires =
    scikit-learn==0.23.2
    numba
    setuptools_scm
    pillow

zip_safe = False
include_package_data = True
packages = find:

[options.extras_require]
dev =
    matplotlib
    pytest
    pytest-cov
    pytest-benchmark
    sphinx
    sphinx-gallery
    numpydoc
    sphinx_rtd_theme
    sphinx_copybutton
    sphinxcontrib-matlabdomain
    flake8
